<resources>
    <string name="app_name">CookbookApp</string>
    <string name="greeting_text">Welcome to Cookbook</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="logout">Log out</string>
    <string name="passwordRequest">Request new password</string>
    <string name="accountName">Sok Sabay</string>
    <string name="accountEmail">soksabay@gmail.com</string>
    <string name="dashboard1">Your account</string>
    <string name="dashboard2">Featured Recipes</string>
    <string name="dashboard3">Saved Recipes</string>
    <string name="dashboard4">Settings</string>
    <string name="dashboard5">About us</string>
    <string name="AboutCookbook">About Cookbook</string>
    <string name="sort1">Sort by date</string>
    <string name="sort2">Sort by ratings</string>
    <string name="sort3">Sort by categories</string>
    <string name="AboutUsContent" translatable="false"> Cookbook is an app that lets you discover new food recipes to cook for yourself and your family.</string>
    <string name="mission" translatable="false">Our Mission</string>
    <string name="missionContent" translatable="false">To make available food recipes from different categories. </string>
    <string name="visionContent" translatable="false"> To be the most convenient app for users to instantly learn new recipes. </string>
    <string name="vision" translatable="false">Our Vision</string>
    <string name="overview" translatable="false">Overview of Cookbook</string>
    <string name="copyright" translatable="false">Copyright © Cookbook 2020</string>

</resources>
